Fix overflow

--- a/rank.css
+++ b/rank.css
@@ -7,7 +7,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #hex-container {
